--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Abhishek Pathak <abhishek@flutterflow.io>",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "systeminformation": "^5.17.1"
   },
